[package]
name = "skribo"
version = "0.0.1"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "text", "formatting", "layout"]
repository = "https://github.com/linebender/skribo"
description = "A Rust library for low-level text layout."
readme = "README.md"
categories = ["graphics", "text-processing"]

[dependencies]
euclid = "0.20"
font-kit = { version = "0.4.0"} #, features = ["loader-freetype-default"] }
unicode-normalization = "0.1.8"
log = "0.4"

[dependencies.harfbuzz]
git = "https://github.com/servo/rust-harfbuzz.git"
rev = "82d4c5b78107a7e87f04803873dc9a2a176628dd"

[dependencies.harfbuzz-sys]
git = "https://github.com/servo/rust-harfbuzz.git"
rev = "82d4c5b78107a7e87f04803873dc9a2a176628dd"
